Cleanup code
- Add lombok to simplify getter, setter and delegate code
- Update logic blocks to try-with-statement and pattern matching for instanceof
- Follow functional programming
- Add linter to gradle config

Signed-off-by: Sean Sundberg <seansund@us.ibm.com>